--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: php
 
 php:
-    - 5.4
     - 5.5
     - 5.6
+    - 5.7
     - hhvm
     - hhvm-nightly
 
@@ -18,7 +18,7 @@ before_script:
 
 script:
     - cd $TRAVIS_BUILD_DIR
-    - vendor/bin/phpunit -c test/phpunit.xml --coverage-clover=./build/clover.xml
+    - vendor/bin/phpunit -c test/phpunit.xml
     - vendor/bin/phpcs --standard=PSR2 -s -p src/
 
 after_script:
