--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,11 @@
     "description": "Spiffy\\Inject is a light-weight, HHVM compatible, and dependency lite DI container.",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.5"
     },
     "require-dev": {
         "doctrine/annotations": "~1.2",
+        "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~4.0",
         "squizlabs/php_codesniffer": "~1.0",
         "symfony/finder": "~2.1"
