--- a/.travis.yml
+++ b/.travis.yml
@@ -3,13 +3,14 @@ language: php
 php:
     - 5.5
     - 5.6
-    - 5.7
+    - 7.0
     - hhvm
     - hhvm-nightly
 
 matrix:
     fast_finish: true
     allow_failures:
+        - php: 7.0
         - php: hhvm-nightly
         
 before_script:
