--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: php
 
+cache:
+  directories:
+    - vendor
+
 php:
     - 5.5
     - 5.6
@@ -8,18 +12,16 @@ php:
 
 matrix:
     fast_finish: true
-    allow_failures:
-        - php: 7.0
-        
+
 before_script:
     - composer self-update
-    - composer update
+    - composer config --global github-oauth.github.com "$GITHUB_TOKEN"
+    - composer update --prefer-dist --no-interaction
 
 script:
     - cd $TRAVIS_BUILD_DIR
-    - vendor/bin/phpunit -c test/phpunit.xml
+    - vendor/bin/phpunit -c test/phpunit.xml --coverage-clover=./build/clover.xml
     - vendor/bin/phpcs --standard=PSR2 -s -p src/ test/
 
 after_script:
-    - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover ./build/clover.xml
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.5" ]]; then vendor/bin/ocular code-coverage:upload build/clover.xml --format=php-clover; fi
