--- a/composer.json
+++ b/composer.json
@@ -13,16 +13,15 @@
     },
     "require-dev": {
         "doctrine/annotations": "~1.2",
-        "mockery/mockery": "~0.9",
         "phpunit/phpunit": "~4.0",
+        "scrutinizer/ocular": "^1.1.1",
         "squizlabs/php_codesniffer": "~1.0",
         "symfony/finder": "~2.1"
     },
     "autoload": {
         "psr-4": {
             "Tonis\\Di\\": [
-                "src/",
-                "test/"
+                "src/"
             ]
         }
     },
