--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: php
 
-cache:
-  directories:
-    - vendor
-
 php:
     - 5.5
     - 5.6
@@ -15,7 +11,7 @@ matrix:
 
 before_script:
     - composer self-update
-    - composer update --prefer-dist --no-interaction
+    - composer install --prefer-source --no-interaction
 
 script:
     - cd $TRAVIS_BUILD_DIR
