--- a/composer.json
+++ b/composer.json
@@ -25,6 +25,13 @@
             ]
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "Tonis\\Di\\": [
+                "test/"
+            ]
+        }
+    },
     "suggest": {
         "doctrine/annotations": "~1.2, for creating components from annotations",
         "symfony/finder": "~2.1, for using the Symfony Finder to find annotated components"
