--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "php": ">=5.5"
     },
     "require-dev": {
-        "doctrine/annotations": "~1.2",
-        "phpunit/phpunit": "~4.0",
+        "doctrine/annotations": "^1.2",
+        "phpunit/phpunit": "^4.0",
         "scrutinizer/ocular": "^1.1.1",
-        "squizlabs/php_codesniffer": "~1.0",
-        "symfony/finder": "~2.1"
+        "squizlabs/php_codesniffer": "^1.0",
+        "symfony/finder": "^2.1"
     },
     "autoload": {
         "psr-4": {
