Starting of Container interop

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "description": "A light-weight, HHVM compatible, and dependency lite DI container.",
     "license": "BSD-3-Clause",
     "require": {
-        "php": ">=5.5"
+        "php": ">=5.5",
+        "container-interop/container-interop": "^1.1"
     },
     "require-dev": {
         "doctrine/annotations": "^1.2",
