--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,7 @@
     "require-dev": {
         "doctrine/annotations": "^1.2",
         "phpunit/phpunit": "^4.0",
-        "squizlabs/php_codesniffer": "^1.0",
-        "symfony/finder": "^2.1"
+        "squizlabs/php_codesniffer": "^1.0"
     },
     "autoload": {
         "psr-4": {
